force-app/main/default/objects/Segment_Budget__c/Segment_Budget__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold numbers for the Segment Profitability project</description>
    <label>Segment Budget</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Segment Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>