force-app/main/default/objects/Segment_Budget__c/fields/FS_GTM_Budget__c.field-meta.xml
<CustomField>
    <fullName>FS_GTM_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FS CGTM Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>