force-app/main/default/objects/Segment_Budget__c/fields/Network_Id__c.field-meta.xml
<CustomField>
    <fullName>Network_Id__c</fullName>
    <formula>Primary_Sales_Rep__r.Network_ID__c</formula>
    <label>Network Id</label>
    <type>Text</type>
</CustomField>