force-app/main/default/objects/Segment_Budget__c/fields/Packaging_Sales_Budget__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Sales_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Packaging Sales Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>