force-app/main/default/objects/Segment_Budget__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Segment Budgets</relationshipLabel>
    <relationshipName>Segment_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>