force-app/main/default/objects/Segment_Budget__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Segment Budgets (Reports To)</relationshipLabel>
    <relationshipName>Segment_Budgets1</relationshipName>
    <type>Lookup</type>
</CustomField>