force-app/main/default/objects/Segment_Budget__c/fields/Total_Sales_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Budget__c</fullName>
    <formula>FS_Sales_Budget__c +  Packaging_Sales_Budget__c + Paper_Sales_Budget__c + Unknown_Sales_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>